--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ img{
     width: 40%;
     margin-right: auto;
     margin-left: auto;
+    background-color: lightpink;
 }
 #result{
     font-size: 20px;
