--- a/style.css
+++ b/style.css
@@ -24,3 +24,14 @@ img{
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 50px;
 }
+@media screen and (max-width: 768px) {
+    .container{
+        width: 50%;
+        margin-top: 100px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .container{
+        width: 60%;
+    }
+}
